# si26-airtight-ryan

./: .env.example  .gitignore  .lintstagedrc.json  .oxlintrc.json  AGENTS.md  README.md  docker-compose.yml  lefthook.yml  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
e2e/: README.md  package-lock.json  package.json  playwright.config.ts
frontend/: Dockerfile  index.html  (+3 more)
server/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_init.py  0002_clarifications.py  0003_model_response_cache.py
server/app/: config.py  main.py
server/app/api/: content.py  deps.py  sessions.py
server/app/bedrock/: __init__.py  cache.py  client.py
server/app/content/: loader.py
server/app/content/store/: concerns.yaml  rfp_pws.md  rubric.yaml  written_proposal.md
server/app/content/store/personas/: contracting_officer.md  program_rep.md  technical_evaluator.md
server/app/db/: models.py  repo.py  session.py
server/app/pipeline/: conciseness.py  extraction.py  orchestrator.py  reaction.py  scoring.py
server/app/report/: builder.py
server/app/schemas/: content.py  extraction.py  reaction.py  report.py  scoring.py
server/tests/: test_api.py  test_bedrock_client.py  test_conciseness.py  test_content_loader.py  test_extraction.py  test_extraction_schema.py  test_orchestrator.py  test_reaction.py  test_repo.py  test_report.py  test_response_cache.py  test_scoring.py
server/tests/golden/: cases.yaml  test_golden.py
(+39 files in other folders)
